[gd_scene load_steps=5 format=3 uid="uid://be3xpkckjwmky"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_i4n4v"]
[ext_resource type="PackedScene" uid="uid://c210winpe6jbn" path="res://scenes/intro/intro.tscn" id="1_j0ad1"]
[ext_resource type="AudioStream" uid="uid://drnrfoshk7ml2" path="res://sounds/main_theme.ogg" id="2_wo30n"]
[ext_resource type="PackedScene" uid="uid://oqvmhj448jw1" path="res://scenes/menu/bg_computer.tscn" id="4_6uhj6"]

[node name="Menu" type="Node"]
script = ExtResource("1_i4n4v")

[node name="BGComputer" parent="." instance=ExtResource("4_6uhj6")]
is_intro_finished = false

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -41.0
offset_right = 1309.0
offset_bottom = 704.0
color = Color(0, 0, 0, 1)

[node name="Intro" parent="." instance=ExtResource("1_j0ad1")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wo30n")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
limit_left = -50
limit_top = -50
limit_right = 1330
limit_bottom = 770
editor_draw_limits = true

[connection signal="level_picked" from="BGComputer" to="." method="_on_bg_computer_level_picked"]
[connection signal="music_vol_changed" from="BGComputer" to="." method="_on_bg_computer_music_vol_changed"]
[connection signal="end_intro" from="Intro" to="." method="_on_intro_end_intro"]
